--- a/firefox-extension/index.html
+++ b/firefox-extension/index.html
@@ -9,6 +9,9 @@
       <input type="text">
       <button>Clear</button>
     </p>
+    <p>
+      <textarea></textarea>
+    </p>
     <script>
       const button = document.querySelector('button');
       const text = document.querySelector("input[type='text']");
@@ -16,6 +19,5 @@
         text.value = "";
       }
     </script>
-    <script src="./index.js"></script>
   </body>
 </html>
