copy paste feature in the extension popup tab

--- a/popup/index.html
+++ b/popup/index.html
@@ -8,8 +8,94 @@
 
   <body>
     <div id="popup-content">
-      <div>Hello there!</div>
+      <div class="instruction">Ello there<br>
+        Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard
+        <div id = "emoji-table">
+          <button class = "apple">🍎</button>
+          <button class = "banana">🍌</button>
+          <button class = "bang">💥</button>
+          <button class = "baseball">⚾</button>
+          <button class = "basketball">🏀</button>
+          <button class = "beer">🍺</button>
+          <!-- <button class = "bicycle">🚴</button> -->
+          <button class = "bike">🚴</button>
+          <button class = "bomb">💣</button>
+          <button class = "boy">👦</button>
+          <button class = "bug">🐛</button>
+          <button class = "burger">🍔</button>
+          <!-- <button class = "burn">🔥</button> -->
+          <button class = "cake">🎂</button>
+          <button class = "candy">🍬</button>
+          <button class = "cat">🐱</button>
+          <button class = "celebration">🎉</button>
+          <button class = "cheeseburger">🍔</button>
+          <button class = "cookie">🍪</button>
+          <button class = "cool">😎</button>
+          <button class = "cry">😢</button>
+          <button class = "dog">🐶</button>
+          <button class = "doge">🐕</button>
+          <button class = "earth">🌎</button>
+          <button class = "explode">💥</button>
+          <!-- <button class = "fart">💨</button> -->
+          <button class = "fast">💨</button>
+          <button class = "female">👩</button>
+          <button class = "fire">🔥</button>
+          <button class = "fish">🐟</button>
+          <!-- <button class = "flame">🔥</button> -->
+          <!-- <button class = "flower">🌹</button> -->
+          <button class = "food">🍕</button>
+          <button class = "football">🏈</button>
+          <button class = "girl">👧</button>
+          <button class = "golf">⛳</button>
+          <button class = "hamburger">🍔</button>
+          <button class = "happy">😀</button>
+          <button class = "heart">❤️</button>
+          <button class = "horse">🐴</button>
+          <!-- <button class = "hot">🔥</button> -->
+          <button class = "kiss">😘</button>
+          <button class = "laugh">😂</button>
+          <!-- <button class = "lit">🔥</button> -->
+          <button class = "lock">🔒</button>
+          <!-- <button class = "lol">😂</button> -->
+          <button class = "love">😍</button>
+          <button class = "male">👨</button>
+          <!-- <button class = "man">👨</button> -->
+          <button class = "monkey">🐵</button>
+          <button class = "moon">🌙</button>
+          <button class = "note">📝</button>
+          <button class = "paint">🎨</button>
+          <button class = "panda">🐼</button>
+          <button class = "party">🎉</button>
+          <button class = "pig">🐷</button>
+          <button class = "pizza">🍕</button>
+          <button class = "planet">🌎</button>
+          <button class = "rose">🌹</button>
+          <!-- <button class = "rofl">😂</button> -->
+          <button class = "sad">😢</button> 
+          <button class = "sleep">😴</button>
+          <!-- <button class = "smile">😀</button> -->
+          <button class = "smiley">😀</button>
+          <button class = "soccer">⚽</button>
+          <button class = "star">⭐</button>
+          <button class = "sun">☀️</button>
+          <button class = "sunglasses">😎</button>
+          <!-- <button class = "surprised">😮</button> -->
+          <button class = "tree">🌲</button>
+          <!-- <button class = "trophy">🏆</button> -->
+          <button class = "win">🏆</button>
+          <!-- <button class = "wind">💨</button> -->
+          <button class = "wine">🍷</button>
+          <button class = "wink">😉</button>
+          <button class = "woman">👩</button>
+          <button class = "world">🌎</button>
+          <button class = "wow">😮</button>
+        </div>        
+      </div>
+
     </div>
     <script src="./index.js"></script>
+    <!-- <script src = "../index.js"></script> -->
   </body>
 </html>
+
+
