on/off button added, needs proper UI

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -3,11 +3,15 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="./popup-stylesheet.css"/>
   </head>
 
   <body>
     <div id="popup-content">
+      <div>
+        <button id="toggle-on">ON</button>
+        <button id="toggle-off">OFF</button>
+      </div>
       <div class="instruction">Ello there<br>
         Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard;  ❮ or ❯ to change emoji groups
         <div class = "outer-table">
@@ -4110,7 +4114,7 @@
       </div>
 
       </div>
-      <script src="./index.js"></script>
+      <script src="./popup-script.js"></script>
   </body>
 </html>
 
