toggle button with storage API

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -9,8 +9,7 @@
   <body>
     <div id="popup-content">
       <div>
-        <button class="toggle-button" id="toggle-on">ON</button>
-        <button class="toggle-button" id="toggle-off">OFF</button>
+        <button class="toggle-button" id="toggle-on">TURN ON</button>
       </div>
       <div class="instruction">Ello there<br>
         Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard;  ❮ or ❯ to change emoji groups
