toggle emote and emoji buttons added

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -13,11 +13,20 @@
       </div>
       <div class="instruction">Ello there<br>
         Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard;  ❮ or ❯ to change emoji groups
+        Reload after turning on or off for it to take effect.<br>
+        <div class = "type-toggle">
+          <button id = "emoji-toggle">Emoji</button>
+          <button id = "emote-toggle">Emotes</button>
+        </div>
         <div class = "search-bar">
           <input class ="search" type = "text" placeholder="Search...">
         </div>
         <div class = "outer-table">
           <button id = "previous">❮</button>
+
+          <div id = "emoticon-table">
+
+          </div>
           <div id = "emoji-table">
             <div class = 'page smileys-and-emotion'>
               <button class = 'emoji-button' id = ':joy:'>😂</button>
