search tag separated for emote and emoji favorites tab added, search not implemented for emote yet

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -14,17 +14,34 @@
       </div>
       <div class="instruction">
         Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard;  ❮ or ❯ to change emoji groups
+        <br>
         <div class = "type-toggle">
           <button id = "emoji-toggle">Emoji</button>
           <button id = "emote-toggle">Emotes</button>
+          <button id = "favorites">Favorites</button>
         </div>
+
         <div class = "search-bar">
           <input class ="search" type = "text" placeholder="Search...">
           <button id = "previous">❮</button>
           <button id = "next">❯</button>
         </div>
+
         <div class = "outer-table">
+          <div id = "fab-table">
+            <div class = "fab-page">
+              <button class = 'emote-button' id = 'emote-4'>( ͡° ͜ʖ ͡°)</button>
+              <button class = 'emote-button' id = 'emote-5'>( ⚆ _ ⚆ )</button>
+              <button class = 'emote-button' id = 'emote-6'>( ︶︿︶)</button>
+              <button class = 'emote-button' id = 'emote-7'>( ﾟヮﾟ)</button>
+              <button class = 'emoji-button' id = ':pineapple:'>🍍</button>
+              <button class = 'emoji-button' id = ':chocolate_bar:'>🍫</button>
+              <button class = 'emoji-button' id = ':grapes:'>🍇</button>
+            </div>
+          </div>
+
           <div id = "emoticon-table">
+            <!-- search bar inside emoticon -->
             <div class = 'emote-page'>
               <button class = 'emote-button' id = 'emote-0'>( .-. )</button>
               <button class = 'emote-button' id = 'emote-1'>( .o.)</button>
@@ -301,6 +318,13 @@
             </div>
           </div>
           <div id = "emoji-table">
+
+            <!-- <div class = "search-bar">
+              <input class ="search" type = "text" placeholder="Search...">
+              <button id = "previous">❮</button>
+              <button id = "next">❯</button>
+            </div> -->
+
             <div class = 'page smileys-and-emotion'>
               <button class = 'emoji-button' id = ':joy:'>😂</button>
               <button class = 'emoji-button' id = ':heart:'>❤️</button>
