new tabs and search fix

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -16,9 +16,10 @@
         Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard;  ❮ or ❯ to change emoji groups
         <br>
         <div class = "type-toggle">
+          <button id = "recents">Recents</button>
+          <button id = "favorites">Favorites</button>
           <button id = "emoji-toggle">Emoji</button>
           <button id = "emote-toggle">Emotes</button>
-          <button id = "favorites">Favorites</button>
         </div>
 
         <div class = "search-bar">
@@ -28,6 +29,18 @@
         </div>
 
         <div class = "outer-table">
+          <div id = "recents-table">
+            <div class = "recents-page">
+              <button class = 'emoji-button' id = ':cupid:'>💘</button>
+              <button class = 'emoji-button' id = ':heartpulse:'>💗</button>
+              <button class = 'emoji-button' id = ':revolving_hearts:'>💞</button>
+              <button class = 'emoji-button' id = ':speak_no_evil:'>🙊</button>
+              <button class = 'emoji-button' id = ':kiss:'>💋</button>
+              <button class = 'emoji-button' id = ':scream:'>😱</button>
+              <button class = 'emoji-button' id = ':rage:'>😡</button>
+            </div>
+          </div>
+
           <div id = "fab-table">
             <div class = "fab-page">
               <button class = 'emote-button' id = 'emote-4'>( ͡° ͜ʖ ͡°)</button>
