basic settings page structure created

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -9,11 +9,12 @@
   <body>
     <div id="popup-content">
       <div>
-        <button class="toggle-button" id="toggle-on">TURN ON</button>
-        Reload after turning on or off<br>
+        <button id="toggle-button">TURN ON</button>
+        <button id="settings-button">HELP/SETTINGS</button>
       </div>
       <div class="instruction">
-        Type :heart:(space) to get ❤️ or click on the emoji to copy it to the clipboard;  ❮ or ❯ to change emoji groups
+        Type :heart:(space) to get ❤️ or click on the emoji to copy it
+        to the clipboard;  ❮ or ❯ to change emoji groups
         <br>
         <div class = "type-toggle">
           <button id = "recents">Recents</button>
