--- a/help-settings-page/help-settings-content.html
+++ b/help-settings-page/help-settings-content.html
@@ -20,15 +20,18 @@
         <form>
           <p>
             <label for="lead-ch">Starting Character</label>
-            <input type="text" id="lead-ch">
+            <input type="text" id="lead-ch" maxlength="1" name="lead-ch"
+              size="1">
           </p>
           <p>
             <label for="end-ch">Closing Character</label>
-            <input id="end-ch">
+            <input type="text" id="end-ch" maxlength="1" name="end-ch"
+              size="1">
           </p>
+          <button id="character-change" type="submit">Save</button>
         </form>
-        We will also include custom naming for emojis by the users if time 
-        remains.
+        Note: Please reload the extension after changing the characters for the
+        effect to be noticed (turn off/on).
       </div>
       <div class="page" id="dictionary" style="display:none">
         Here will be the text to emoji translation table
