recent tab functionality added

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -11,6 +11,7 @@
       <div>
         <button id="toggle-button">TURN ON</button>
         <button id="settings-button">HELP/SETTINGS</button>
+        <button id="refresh-button">REFRESH</button>
       </div>
       <div class="instruction">
         Type :heart:(space) to get ❤️ or click on the emoji to copy it
@@ -32,13 +33,6 @@
         <div class = "outer-table">
           <div id = "recents-table">
             <div class = "recents-page">
-              <button class = 'emoji-button' id = ':cupid:'>💘</button>
-              <button class = 'emoji-button' id = ':heartpulse:'>💗</button>
-              <button class = 'emoji-button' id = ':revolving_hearts:'>💞</button>
-              <button class = 'emoji-button' id = ':speak_no_evil:'>🙊</button>
-              <button class = 'emoji-button' id = ':kiss:'>💋</button>
-              <button class = 'emoji-button' id = ':scream:'>😱</button>
-              <button class = 'emoji-button' id = ':rage:'>😡</button>
             </div>
           </div>
 
@@ -2814,6 +2808,7 @@
 
       </div>
       <script src="./popup-script.js"></script>
+      <script src="./recent-emotes-script.js"></script>
   </body>
 </html>
 
