settings page style sheet

--- a/help-settings-page/help-settings-content.html
+++ b/help-settings-page/help-settings-content.html
@@ -8,7 +8,12 @@
   <body>
     <header>
       <p id="main-heading-text">
-        Emoji Translator
+        <span class="top-title">Emoji Translator</span>
+        <div class = 'user-basic'>
+            You can translate text into emoji using this addon. By default typing the emoji name specified on the 'dictionary'
+            tab in between ':' i.e <span class="example">:heart: to ❤️</span>. You can change the starting and end character to whatever you find convenient.
+            Also the order of apperance of favourites emoji icons can be changed in the 'settings' tab through simple drag and drop.
+        </div>
       </p>
       <div id = "all-tabs">
         <span class="tab" id="settings">Settings</span>
@@ -18,36 +23,41 @@
     </header>
     <main>
       <div class="page" id="settings-page">
-        <form>
+        <form class="input-characters">
           <p>
-            <label for="lead-ch">Starting Character</label>
+            <span class="">Start and End characters</span><br>
+            <!-- <label for="lead-ch">Starting Character</label> -->
             <input type="text" id="lead-ch" maxlength="1" name="lead-ch"
               size="1">
-          </p>
-          <p>
-            <label for="end-ch">Closing Character</label>
+            <em> Emoji-Unicode </em> 
             <input type="text" id="end-ch" maxlength="1" name="end-ch"
               size="1">
+            <!-- <label for="end-ch">Closing Character</label> -->
           </p>
-          <button id="character-change" type="submit">Save</button>
         </form>
-        Note: Please reload the extension after changing the characters for the
-        effect to be noticed (use the reload button in the popup). 
-        <table class="favorites-emoji-table">
-          <tr class="emoji-row"></tr>
-          <tr class="emoji-row"></tr>
-          <tr class="emoji-row"></tr>
-          <tr class="emoji-row"></tr>
-          <tr class="emoji-row"></tr>
-          <tr class="emoji-row"></tr>
-        </table>
+        <button id="character-change" type="submit">Save</button>
+
+        <div class="favs-table">
+          </em><span class="warning">Note:</span><em>
+          Please reload the extension after changing the characters for the
+          effect to be noticed (use the reload button in the popup).</em> 
+          <table class="favorites-emoji-table">
+            <tr class="emoji-row"></tr>
+            <tr class="emoji-row"></tr>
+            <tr class="emoji-row"></tr>
+            <tr class="emoji-row"></tr>
+            <tr class="emoji-row"></tr>
+            <tr class="emoji-row"></tr>
+          </table>
+      </div>
         <button id="favorites-order-save" type="submit">Save Favorites Order</button>
       </div>
       <div class="page" id="dictionary" style="display:none">
-        Here will be the text to emoji translation table
+        Here will be the text to emoji translation table.
+        
       </div>
       <div class="page" id="about" style="display:none">
-        This is the about page. Lorem Ipsum.
+        This is an emoji keyboard addon for browsers.
       </div>
     </main>
     <script src="./help-settings-script.js"></script>
