--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -8,6 +8,7 @@
 
   <body>
     <div id="popup-content">
+      <div class='title'>Emotalks</div>
       <div>
         <button id="toggle-button">TURN ON</button>
         <button id="settings-button">HELP/SETTINGS</button>
@@ -15,8 +16,9 @@
       </div>
       <div class="instruction">
         Type :heart:(space) to get ❤️ or click on the emoji to copy it
-        to the clipboard;  ❮ or ❯ to change emoji groups
+        to the clipboard. Find more help on the settings tab.
         <br>
+      </div>
         <div class = "type-toggle">
           <button id = "recents">Recents</button>
           <button id = "favorites">Favorites</button>
@@ -2799,7 +2801,7 @@
           </div>
         </div>
 
-      </div>
+      <!-- </div> -->
       <script src="./popup-script.js"></script>
       <script src="./recent-emotes-script.js"></script>
   </body>
