--- a/help-settings-page/help-settings-content.html
+++ b/help-settings-page/help-settings-content.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="./help-settings-stylesheet.css">
     <link rel="stylesheet" href="./settings-tab-stylesheet.css">
   </head>
