emote page navigation added

--- a/popup/popup-content.html
+++ b/popup/popup-content.html
@@ -51,7 +51,6 @@
         </div>
 
         <div class="tab-page" id = "emoticon-table">
-          <!-- search bar inside emoticon -->
           <div class = 'emote-page'>
             <button class = 'emote-button' id = 'happy-joy-0'>(* ^ ω ^)</button>
             <button class = 'emote-button' id = 'happy-joy-1'>(´ ∀ ` *)</button>
@@ -799,7 +798,7 @@
           </div>
         </div>
         <div class="tab-page" id = "emoji-table">
-            <div class = 'page smileys-and-emotion'>
+            <div class = 'emoji-page smileys-and-emotion'>
               <button class = 'emoji-button' id = ':joy:'>😂</button>
               <button class = 'emoji-button' id = ':heart:'>❤️</button>
               <button class = 'emoji-button' id = ':heart_eyes:'>😍</button>
@@ -956,7 +955,7 @@
               <button class = 'emoji-button' id = ':right_anger_bubble:'>🗯️</button>
               <button class = 'emoji-button' id = ':heart_exclamation:'>❣️</button>
             </div>
-            <div class = 'page people-and-body'>
+            <div class = 'emoji-page people-and-body'>
               <button class = 'emoji-button' id = 'Waving Hand'>👋</button>
               <button class = 'emoji-button' id = 'Raised Back of Hand'>🤚</button>
               <button class = 'emoji-button' id = 'Hand with Fingers Splayed'>🖐️</button>
@@ -1305,7 +1304,7 @@
               <button class = 'emoji-button' id = 'People Hugging'>🫂</button>
               <button class = 'emoji-button' id = 'Footprints'>👣</button>  
             </div>
-            <div class = 'page activities'>
+            <div class = 'emoji-page activities'>
               <button class = 'emoji-button' id = ':heart_suit:'>♥️</button>
               <button class = 'emoji-button' id = ':sparkles:'>✨</button>
               <button class = 'emoji-button' id = ':tada:'>🎉</button>
@@ -1391,7 +1390,7 @@
               <button class = 'emoji-button' id = ':chess_pawn:'>♟️</button>
               <button class = 'emoji-button' id = ':chess_pawn:'>♟</button>
             </div>
-            <div class = 'page symbols'>
+            <div class = 'emoji-page symbols'>
               <button class = 'emoji-button' id = ':recycle:'>♻</button>
               <button class = 'emoji-button' id = ':arrow_left:'>⬅️</button>
               <button class = 'emoji-button' id = ':heavy_check_mark:'>✔️</button>
@@ -1686,7 +1685,7 @@
               <button class = 'emoji-button' id = ':black_small_square:'>▪</button>
               <button class = 'emoji-button' id = ':white_small_square:'>▫️</button>
             </div>
-            <div class = 'page objects'>
+            <div class = 'emoji-page objects'>
               <button class = 'emoji-button' id = ':notes:'>🎶</button>
               <button class = 'emoji-button' id = ':crown:'>👑</button>
               <button class = 'emoji-button' id = ':headphones:'>🎧</button>
@@ -1951,7 +1950,7 @@
               <button class = 'emoji-button' id = ':coffin:'>⚰️</button>
               <button class = 'emoji-button' id = ':funeral_urn:'>⚱️</button>
             </div>
-            <div class = 'page animals-and-nature'>
+            <div class = 'emoji-page animals-and-nature'>
               <button class = 'emoji-button' id = ':cherry_blossom:'>🌸</button>
               <button class = 'emoji-button' id = ':rose:'>🌹</button>
               <button class = 'emoji-button' id = ':leaves:'>🍃</button>
@@ -2086,7 +2085,7 @@
               <button class = 'emoji-button' id = ':wilted_flower:'>🥀</button>
               <button class = 'emoji-button' id = ':shamrock:'>☘️</button>
             </div>
-            <div class = 'page Travel & Places (sky & weather)'>
+            <div class = 'emoji-page Travel & Places (sky & weather)'>
               <button class = 'emoji-button' id = ':fire:'>🔥</button>
               <button class = 'emoji-button' id = ':sunny:'>☀️</button>
               <button class = 'emoji-button' id = ':new_moon_with_face:'>🌚</button>
@@ -2153,7 +2152,7 @@
               <button class = 'emoji-button' id = ':snowman:'>☃</button>
               <button class = 'emoji-button' id = ':comet:'>☄️</button>
             </div>
-            <div class = 'page Objects (light & video)'>
+            <div class = 'emoji-page Objects (light & video)'>
               <button class = 'emoji-button' id = ':camera:'>📷</button>
               <button class = 'emoji-button' id = ':movie_camera:'>🎥</button>
               <button class = 'emoji-button' id = ':clapper:'>🎬</button>
@@ -2171,7 +2170,7 @@
               <button class = 'emoji-button' id = ':candle:'>🕯️</button>
               <button class = 'emoji-button' id = ':diya_lamp:'>🪔</button>
             </div>
-            <div class = 'page food-and-drink'>
+            <div class = 'emoji-page food-and-drink'>
               <button class = 'emoji-button' id = ':pizza:'>🍕</button>
               <button class = 'emoji-button' id = ':beers:'>🍻</button>
               <button class = 'emoji-button' id = ':birthday:'>🎂</button>
@@ -2296,7 +2295,7 @@
               <button class = 'emoji-button' id = ':fork_and_knife_with_plate:'>🍽️</button>
               <button class = 'emoji-button' id = ':spoon:'>🥄</button>
             </div>
-            <div class = 'page travel-and-places'>
+            <div class = 'emoji-page travel-and-places'>
               <button class = 'emoji-button' id = ':airplane:'>✈️</button>
               <button class = 'emoji-button' id = ':earth_africa:'>🌍</button>
               <button class = 'emoji-button' id = ':anchor:'>⚓</button>
@@ -2492,7 +2491,7 @@
               <button class = 'emoji-button' id = ':timer_clock:'>⏲️</button>
               <button class = 'emoji-button' id = ':mantelpiece_clock:'>🕰️</button>
             </div>
-            <div class = 'page flags'>
+            <div class = 'emoji-page flags'>
               <button class = 'emoji-button' id = ':us:'>🇺🇸</button>
               <button class = 'emoji-button' id = ':fr:'>🇫🇷</button>
               <button class = 'emoji-button' id = ':it:'>🇮🇹</button>
@@ -2769,7 +2768,7 @@
               <button class = 'emoji-button' id = ':Scotland:'>🏴󠁧󠁢󠁳󠁣󠁴󠁿</button>
               <button class = 'emoji-button' id = ':wales:'>🏴󠁧󠁢󠁷󠁬󠁳󠁿</button>
             </div>
-            <div class = 'page miscellaneous'>
+            <div class = 'emoji-page miscellaneous'>
               <button class = 'emoji-button' id = ':baseball:'>⚾️</button>
               <button class = 'emoji-button' id = ''>🇪</button>
               <button class = 'emoji-button' id = ''>#</button>
