instructions in the settings page

--- a/help-settings-page/help-settings-content.html
+++ b/help-settings-page/help-settings-content.html
@@ -65,8 +65,9 @@
         </div>
       </div>
       <div class="page" id="dictionary" style="display:none">
-        The emoji corresponding to the emoji unicode are listed here.
-        <table>
+        <!-- The emoji corresponding to the emoji unicode are listed here. -->
+        <div class="translation-x-help">
+          <table>
           <tbody>
               <tr class="sticky-top">
                   <th colspan="2">A</th>
@@ -7547,7 +7548,22 @@
                   </tr>
                 
           </tbody>
-        </table>
+          </table>
+
+          <div class="help-note"> 
+          <span class="help-note-header">Instructions</span>
+          <div class="help-text">
+            <ul>
+              <li>The emoji unicodes for corresponding emoji are listed in the table</li>
+              <li><em>Left click</em> will copy the emoji/emote to the clipboard</li>
+              <li><em>Right click</em> will add the emoji to the favourites tab </li>
+              <li><em>Right click</em> on already favourite-listed emoji will remove it from the tab</li>
+            </ul>
+          </div>
+          </div>
+
+        </div>
+
 
       </div>
       <div class="page" id="about" style="display:none">
