updated contact status

--- a/help-settings-page/help-settings-content.html
+++ b/help-settings-page/help-settings-content.html
@@ -7591,7 +7591,20 @@
 
       </div>
       <div class="page" id="about" style="display:none">
-        This is an emoji keyboard addon for browsers.
+        This is an emoji keyboard addon for browsers developed by two web enthusiastic developers from Pulchowk Campus,
+        IOE, Nepal.<br> 
+        Suggestions and feedback are appreciated.<br>
+        <strong>Contact:</strong>
+        <address>
+          Email Us at:<br>
+          <a href="mailto:pranjalpokharel007@gmail.com">Pranjal Pokharel</a><br>
+          <a href="mailto:sandeshpokhrel54@gmail.com">Sandesh Pokhrel</a><br>
+          You can contribute to the repository on GitHub:<br>
+          <a href="https://github.com/pranjalpokharel7/emoji-translator">Emoji-Translator</a><br>
+          Twitter Links:<br>
+          <a href="https://twitter.com/Dovahkiin_08">@Dovahkiin_08 (Sandesh Pokhrel)</a><br>
+          <a href="https://twitter.com/ppok24">@ppok24 (Pranjal Pokharel)</a><br>
+        </address> 
       </div>
     </main>
     <script src="./help-settings-script.js"></script>
