minor changes in styling and layout

--- a/help-settings-page/help-settings-content.html
+++ b/help-settings-page/help-settings-content.html
@@ -40,8 +40,8 @@
         </form>
         <p id="#note">
           <span class="warning">Note:</span>
-          Please reload the extension after changing the characters for the
-          effect to be noticed (use the reload button in the popup).
+          Please reload any page you previously loaded after changing 
+          the translation pattern for the translation to be updated.
         </p>
         <div class="favs-table">
           <h4 class = "sub-header">Favorites Emoji List</h4>
@@ -58,10 +58,13 @@
             <tr class="emoji-row"></tr>
             <tr class="emoji-row"></tr>
           </table>
+          <p id="unsaved-data">
+            *You have unsaved changes, please click the 'Save Favorites
+          Data' to preserve your changes.</p>
           <div id="favorites-save-buttons">
             <button class="save-button" 
                     id="favorites-order-save" 
-                    type="submit">Save Favorites Order</button>
+                    type="submit">Save Favorites Data</button>
             <button class="save-button" 
                     id="favorites-clear" 
                     type="submit">Clear All Favorites</button>
